--- a/public/note.html
+++ b/public/note.html
@@ -5,6 +5,54 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Collaborative Notes App</title>
   <link rel="stylesheet" href="/style.css"> <!-- Use absolute path -->
+  <style>
+    /* Common font family for both buttons */
+    body {
+      font-family: 'Press Start 2P', cursive; /* Ensures both buttons use the same font */
+    }
+
+    /* Common styling for both Save and Delete buttons */
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+      border: none;
+      cursor: pointer;
+      border-radius: 8px;
+      text-transform: uppercase;
+      margin-top: 20px;
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+
+    /* Specific styling for the Save button */
+    #save-note {
+      background-color: #4CAF50; /* Green color */
+      color: white;
+    }
+
+    #save-note:hover {
+      transform: scale(1.1);
+      box-shadow: 0px 0px 15px rgba(76, 175, 80, 0.7);
+    }
+
+    /* Specific styling for the Delete button */
+    #delete-note {
+      background-color: #FF4D4D; /* Red color */
+      color: white;
+    }
+
+    #delete-note:hover {
+      transform: scale(1.1);
+      box-shadow: 0px 0px 15px rgba(255, 77, 77, 0.7);
+    }
+
+    /* Add styles for the note area */
+    #note-content {
+      width: 100%;
+      height: 200px;
+      font-size: 16px;
+      padding: 10px;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -14,6 +62,7 @@
     <div id="note-display">
       <textarea id="note-content" placeholder="Loading note..."></textarea>
       <button id="save-note">Save Note</button>
+      <button id="delete-note">Delete Note</button> <!-- DELETE button -->
     </div>
   </main>
   <footer>
@@ -36,6 +85,7 @@
         }
       }
 
+      // Save note functionality
       document.getElementById('save-note').addEventListener('click', async () => {
         const content = document.getElementById('note-content').value;
         try {
@@ -54,6 +104,27 @@
           }
         } catch (error) {
           alert('Error updating note');
+        }
+      });
+
+      // Delete note functionality
+      document.getElementById('delete-note').addEventListener('click', async () => {
+        const confirmation = confirm("Are you sure you want to delete this note?");
+        if (confirmation) {
+          try {
+            const response = await fetch(`/delete-note/${noteId}`, {
+              method: 'DELETE',
+            });
+            const result = await response.json();
+            if (result.success) {
+              alert('Note deleted successfully!');
+              window.location.href = '/'; // Redirect to homepage or another page after deletion
+            } else {
+              alert('Error deleting note');
+            }
+          } catch (error) {
+            alert('Error deleting note');
+          }
         }
       });
     });
